tests/sema/invalid/undeclared_target.vit
proc main() {
  set missing = 1;
}
